--- a/src/styles/colors.scss
+++ b/src/styles/colors.scss
@@ -15,7 +15,7 @@ $themes: (
     background-menu: #2c303b,
     background-menu-lowered: #1f2229,
     background-list-accent: #4a50aa,
-    background-list-lowered: #F0F4FF,
+    background-list-lowered: #f0f4ff,
     background-accent: #4a50aa,
     background-accent-lowered: #4a50aa,
     background-important: #d16b27,
@@ -66,9 +66,9 @@ $themes: (
     border-hover-neutral: #4a4c5a,
     border-hover-neutral-alt: #5d15a0,
     border-hover-positive: #1e8460,
-    input-border: #D9D9D9,
-    input-border-hover: #A9BDFC,
-    input-border-active: #6274B7,
+    input-border: #d9d9d9,
+    input-border-hover: #a9bdfc,
+    input-border-active: #6274b7,
     chart-1: #ff9149,
     chart-2: #1e9ff2,
     chart-3: #28d094,
@@ -129,9 +129,9 @@ $themes: (
     background-menu: #2c303b,
     background-menu-lowered: #1f2229,
     background-list-accent: #447ef1,
-    background-list-lowered: #F0F4FF,
+    background-list-lowered: #f0f4ff,
     background-accent: #666ee8,
-    background-accent-lowered: #A9BDFC,
+    background-accent-lowered: #a9bdfc,
     background-important: #ff9149,
     background-important-alt: #1e9ff2,
     background-inactive: #f4f5fa,
@@ -158,7 +158,7 @@ $themes: (
     border-accent: #3a44e1,
     border-important: #ff7216,
     border-important-alt: #0c84d1,
-    border-inactive: #D9D9D9,
+    border-inactive: #d9d9d9,
     border-negative: #ff1635,
     border-neutral: #545766,
     border-neutral-alt: #7e29ce,
@@ -180,9 +180,9 @@ $themes: (
     border-hover-neutral: #5f6374,
     border-hover-neutral-alt: #7e29ce,
     border-hover-positive: #24bb85,
-    input-border: #D9D9D9,
-    input-border-hover: #A9BDFC,
-    input-border-active: #6274B7,
+    input-border: #d9d9d9,
+    input-border-hover: #a9bdfc,
+    input-border-active: #6274b7,
     chart-1: #ff9149,
     chart-2: #1e9ff2,
     chart-3: #28d094,
@@ -211,7 +211,7 @@ $themes: (
     line-chart-neutral: #6b6f82,
     line-chart-neutral-alt: #903ae1,
     line-chart-positive: #28d094,
-    placeholder: #CACFE7,
+    placeholder: #cacfe7,
     shadow-normal: rgba(black, 10%),
     text-contrast: black,
     text-contrast-opposite: white,
